# panos-upgrade-ansible

./: ansible.cfg  inventory.yaml  pyproject.toml  upgrade.yaml
